lab2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> START
Rule 1     START -> <empty>
Rule 2     START -> MORESTATEMENTS
Rule 3     MORESTATEMENTS -> STATEMENT
Rule 4     MORESTATEMENTS -> STATEMENT MORESTATEMENTS
Rule 5     MORESTATEMENTS -> { MORESTATEMENTS }
Rule 6     STATEMENT -> IFSTATEMENT
Rule 7     STATEMENT -> LOOP
Rule 8     STATEMENT -> EXPR ;
Rule 9     STATEMENT -> RETURNSTATEMENT ;
Rule 10    STATEMENT -> ASSIGNSTATEMENT ;
Rule 11    STATEMENT -> PRINTSTATEMENT ;
Rule 12    RETURNSTATEMENT -> RETURN
Rule 13    RETURNSTATEMENT -> RETURN EXPR
Rule 14    PRINTSTATEMENT -> PRINT PRINTABLES
Rule 15    PRINTABLES -> PRINTABLE
Rule 16    PRINTABLES -> PRINTABLES , PRINTABLE
Rule 17    PRINTABLE -> ARITHMETICOPERATION
Rule 18    PRINTABLE -> LOGICALEXPR
Rule 19    PRINTABLE -> STRING
Rule 20    ASSIGNSTATEMENT -> ASSIGNABLE = EXPR
Rule 21    ASSIGNSTATEMENT -> ASSIGNABLE ASSIGNPLUS EXPR
Rule 22    ASSIGNSTATEMENT -> ASSIGNABLE ASSIGNMINUS EXPR
Rule 23    ASSIGNSTATEMENT -> ASSIGNABLE ASSIGNTIMES EXPR
Rule 24    ASSIGNSTATEMENT -> ASSIGNABLE ASSIGNDIVIDE EXPR
Rule 25    ASSIGNABLE -> ID
Rule 26    ASSIGNABLE -> MATRIXACCESS
Rule 27    MATRIXACCESS -> ID [ ARITHMETICOPERATION , ARITHMETICOPERATION ]
Rule 28    EXPR -> ARITHMETICOPERATION
Rule 29    EXPR -> MATRIXOPERATION
Rule 30    EXPR -> LOGICALEXPR
Rule 31    LOGICALEXPR -> ARITHMETICOPERATION EQ ARITHMETICOPERATION
Rule 32    LOGICALEXPR -> ARITHMETICOPERATION NEQ ARITHMETICOPERATION
Rule 33    LOGICALEXPR -> ARITHMETICOPERATION > ARITHMETICOPERATION
Rule 34    LOGICALEXPR -> ARITHMETICOPERATION < ARITHMETICOPERATION
Rule 35    LOGICALEXPR -> ARITHMETICOPERATION LEQ ARITHMETICOPERATION
Rule 36    LOGICALEXPR -> ARITHMETICOPERATION GEQ ARITHMETICOPERATION
Rule 37    ARITHMETICOPERATION -> ASSIGNABLE
Rule 38    ARITHMETICOPERATION -> INTNUMBER
Rule 39    ARITHMETICOPERATION -> FLOATNUMBER
Rule 40    ARITHMETICOPERATION -> ( ARITHMETICOPERATION )
Rule 41    ARITHMETICOPERATION -> ARITHMETICOPERATION + ARITHMETICOPERATION
Rule 42    ARITHMETICOPERATION -> ARITHMETICOPERATION - ARITHMETICOPERATION
Rule 43    ARITHMETICOPERATION -> ARITHMETICOPERATION * ARITHMETICOPERATION
Rule 44    ARITHMETICOPERATION -> ARITHMETICOPERATION / ARITHMETICOPERATION
Rule 45    ARITHMETICOPERATION -> - ARITHMETICOPERATION
Rule 46    SPECIALMATRIXWORD -> ZEROS
Rule 47    SPECIALMATRIXWORD -> ONES
Rule 48    SPECIALMATRIXWORD -> EYE
Rule 49    IFSTATEMENT -> IF ( LOGICALEXPR ) MORESTATEMENTS
Rule 50    IFSTATEMENT -> IF ( LOGICALEXPR ) MORESTATEMENTS ELSE MORESTATEMENTS
Rule 51    LOOP -> FORLOOP
Rule 52    LOOP -> WHILELOOP
Rule 53    FORLOOP -> FOR ID = RANGEOPERATOR LOOPSTATEMENT
Rule 54    FORLOOP -> FOR ID = RANGEOPERATOR { LOOPSTATEMENTS }
Rule 55    WHILELOOP -> WHILE ( LOGICALEXPR ) LOOPSTATEMENT
Rule 56    WHILELOOP -> WHILE ( LOGICALEXPR ) { LOOPSTATEMENTS }
Rule 57    LOOPSTATEMENTS -> LOOPSTATEMENT
Rule 58    LOOPSTATEMENTS -> LOOPSTATEMENT LOOPSTATEMENTS
Rule 59    LOOPSTATEMENTS -> { LOOPSTATEMENTS }
Rule 60    LOOPSTATEMENT -> IFSTATEMENTWITHLOOPSTATEMENTS
Rule 61    LOOPSTATEMENT -> LOOP
Rule 62    LOOPSTATEMENT -> EXPR ;
Rule 63    LOOPSTATEMENT -> RETURNSTATEMENT ;
Rule 64    LOOPSTATEMENT -> ASSIGNSTATEMENT ;
Rule 65    LOOPSTATEMENT -> PRINTSTATEMENT ;
Rule 66    LOOPSTATEMENT -> BREAK ;
Rule 67    LOOPSTATEMENT -> CONTINUE ;
Rule 68    MATRIXOPERATION -> ID
Rule 69    MATRIXOPERATION -> [ MATRIXINITIALIZER ]
Rule 70    MATRIXOPERATION -> ( MATRIXOPERATION )
Rule 71    MATRIXOPERATION -> MATRIXOPERATION '
Rule 72    MATRIXOPERATION -> MATRIXOPERATION MPLUS MATRIXOPERATION
Rule 73    MATRIXOPERATION -> MATRIXOPERATION MMINUS MATRIXOPERATION
Rule 74    MATRIXOPERATION -> MATRIXOPERATION MTIMES MATRIXOPERATION
Rule 75    MATRIXOPERATION -> MATRIXOPERATION MDIVIDE MATRIXOPERATION
Rule 76    MATRIXOPERATION -> SPECIALMATRIXWORD ( ARITHMETICOPERATION )
Rule 77    IFSTATEMENTWITHLOOPSTATEMENTS -> IF ( LOGICALEXPR ) LOOPSTATEMENTS
Rule 78    IFSTATEMENTWITHLOOPSTATEMENTS -> IF ( LOGICALEXPR ) LOOPSTATEMENTS ELSE LOOPSTATEMENTS
Rule 79    RANGEOPERATOR -> ARITHMETICOPERATION : ARITHMETICOPERATION
Rule 80    MATRIXINITIALIZER -> [ INNERLIST ]
Rule 81    MATRIXINITIALIZER -> MATRIXINITIALIZER , [ INNERLIST ]
Rule 82    INNERLIST -> ARITHMETICOPERATION
Rule 83    INNERLIST -> INNERLIST , ARITHMETICOPERATION

Terminals, with rules where they appear

'                    : 71
(                    : 40 49 50 55 56 70 76 77 78
)                    : 40 49 50 55 56 70 76 77 78
*                    : 43
+                    : 41
,                    : 16 27 81 83
-                    : 42 45
/                    : 44
:                    : 79
;                    : 8 9 10 11 62 63 64 65 66 67
<                    : 34
=                    : 20 53 54
>                    : 33
ASSIGNDIVIDE         : 24
ASSIGNMINUS          : 22
ASSIGNPLUS           : 21
ASSIGNTIMES          : 23
BREAK                : 66
CONTINUE             : 67
ELSE                 : 50 78
EQ                   : 31
EYE                  : 48
FLOATNUMBER          : 39
FOR                  : 53 54
GEQ                  : 36
ID                   : 25 27 53 54 68
IF                   : 49 50 77 78
INTNUMBER            : 38
LEQ                  : 35
MDIVIDE              : 75
MMINUS               : 73
MPLUS                : 72
MTIMES               : 74
NEQ                  : 32
ONES                 : 47
PRINT                : 14
RETURN               : 12 13
STRING               : 19
WHILE                : 55 56
ZEROS                : 46
[                    : 27 69 80 81
]                    : 27 69 80 81
error                : 
{                    : 5 54 56 59
}                    : 5 54 56 59

Nonterminals, with rules where they appear

ARITHMETICOPERATION  : 17 27 27 28 31 31 32 32 33 33 34 34 35 35 36 36 40 41 41 42 42 43 43 44 44 45 76 79 79 82 83
ASSIGNABLE           : 20 21 22 23 24 37
ASSIGNSTATEMENT      : 10 64
EXPR                 : 8 13 20 21 22 23 24 62
FORLOOP              : 51
IFSTATEMENT          : 6
IFSTATEMENTWITHLOOPSTATEMENTS : 60
INNERLIST            : 80 81 83
LOGICALEXPR          : 18 30 49 50 55 56 77 78
LOOP                 : 7 61
LOOPSTATEMENT        : 53 55 57 58
LOOPSTATEMENTS       : 54 56 58 59 77 78 78
MATRIXACCESS         : 26
MATRIXINITIALIZER    : 69 81
MATRIXOPERATION      : 29 70 71 72 72 73 73 74 74 75 75
MORESTATEMENTS       : 2 4 5 49 50 50
PRINTABLE            : 15 16
PRINTABLES           : 14 16
PRINTSTATEMENT       : 11 65
RANGEOPERATOR        : 53 54
RETURNSTATEMENT      : 9 63
SPECIALMATRIXWORD    : 76
START                : 0
STATEMENT            : 3 4
WHILELOOP            : 52

Parsing method: LALR

state 0

    (0) S' -> . START
    (1) START -> .
    (2) START -> . MORESTATEMENTS
    (3) MORESTATEMENTS -> . STATEMENT
    (4) MORESTATEMENTS -> . STATEMENT MORESTATEMENTS
    (5) MORESTATEMENTS -> . { MORESTATEMENTS }
    (6) STATEMENT -> . IFSTATEMENT
    (7) STATEMENT -> . LOOP
    (8) STATEMENT -> . EXPR ;
    (9) STATEMENT -> . RETURNSTATEMENT ;
    (10) STATEMENT -> . ASSIGNSTATEMENT ;
    (11) STATEMENT -> . PRINTSTATEMENT ;
    (49) IFSTATEMENT -> . IF ( LOGICALEXPR ) MORESTATEMENTS
    (50) IFSTATEMENT -> . IF ( LOGICALEXPR ) MORESTATEMENTS ELSE MORESTATEMENTS
    (51) LOOP -> . FORLOOP
    (52) LOOP -> . WHILELOOP
    (28) EXPR -> . ARITHMETICOPERATION
    (29) EXPR -> . MATRIXOPERATION
    (30) EXPR -> . LOGICALEXPR
    (12) RETURNSTATEMENT -> . RETURN
    (13) RETURNSTATEMENT -> . RETURN EXPR
    (20) ASSIGNSTATEMENT -> . ASSIGNABLE = EXPR
    (21) ASSIGNSTATEMENT -> . ASSIGNABLE ASSIGNPLUS EXPR
    (22) ASSIGNSTATEMENT -> . ASSIGNABLE ASSIGNMINUS EXPR
    (23) ASSIGNSTATEMENT -> . ASSIGNABLE ASSIGNTIMES EXPR
    (24) ASSIGNSTATEMENT -> . ASSIGNABLE ASSIGNDIVIDE EXPR
    (14) PRINTSTATEMENT -> . PRINT PRINTABLES
    (53) FORLOOP -> . FOR ID = RANGEOPERATOR LOOPSTATEMENT
    (54) FORLOOP -> . FOR ID = RANGEOPERATOR { LOOPSTATEMENTS }
    (55) WHILELOOP -> . WHILE ( LOGICALEXPR ) LOOPSTATEMENT
    (56) WHILELOOP -> . WHILE ( LOGICALEXPR ) { LOOPSTATEMENTS }
    (37) ARITHMETICOPERATION -> . ASSIGNABLE
    (38) ARITHMETICOPERATION -> . INTNUMBER
    (39) ARITHMETICOPERATION -> . FLOATNUMBER
    (40) ARITHMETICOPERATION -> . ( ARITHMETICOPERATION )
    (41) ARITHMETICOPERATION -> . ARITHMETICOPERATION + ARITHMETICOPERATION
    (42) ARITHMETICOPERATION -> . ARITHMETICOPERATION - ARITHMETICOPERATION
    (43) ARITHMETICOPERATION -> . ARITHMETICOPERATION * ARITHMETICOPERATION
    (44) ARITHMETICOPERATION -> . ARITHMETICOPERATION / ARITHMETICOPERATION
    (45) ARITHMETICOPERATION -> . - ARITHMETICOPERATION
    (68) MATRIXOPERATION -> . ID
    (69) MATRIXOPERATION -> . [ MATRIXINITIALIZER ]
    (70) MATRIXOPERATION -> . ( MATRIXOPERATION )
    (71) MATRIXOPERATION -> . MATRIXOPERATION '
    (72) MATRIXOPERATION -> . MATRIXOPERATION MPLUS MATRIXOPERATION
    (73) MATRIXOPERATION -> . MATRIXOPERATION MMINUS MATRIXOPERATION
    (74) MATRIXOPERATION -> . MATRIXOPERATION MTIMES MATRIXOPERATION
    (75) MATRIXOPERATION -> . MATRIXOPERATION MDIVIDE MATRIXOPERATION
    (76) MATRIXOPERATION -> . SPECIALMATRIXWORD ( ARITHMETICOPERATION )
    (31) LOGICALEXPR -> . ARITHMETICOPERATION EQ ARITHMETICOPERATION
    (32) LOGICALEXPR -> . ARITHMETICOPERATION NEQ ARITHMETICOPERATION
    (33) LOGICALEXPR -> . ARITHMETICOPERATION > ARITHMETICOPERATION
    (34) LOGICALEXPR -> . ARITHMETICOPERATION < ARITHMETICOPERATION
    (35) LOGICALEXPR -> . ARITHMETICOPERATION LEQ ARITHMETICOPERATION
    (36) LOGICALEXPR -> . ARITHMETICOPERATION GEQ ARITHMETICOPERATION
    (25) ASSIGNABLE -> . ID
    (26) ASSIGNABLE -> . MATRIXACCESS
    (46) SPECIALMATRIXWORD -> . ZEROS
    (47) SPECIALMATRIXWORD -> . ONES
    (48) SPECIALMATRIXWORD -> . EYE
    (27) MATRIXACCESS -> . ID [ ARITHMETICOPERATION , ARITHMETICOPERATION ]

    $end            reduce using rule 1 (START -> .)
    {               shift and go to state 4
    IF              shift and go to state 11
    RETURN          shift and go to state 18
    PRINT           shift and go to state 20
    FOR             shift and go to state 21
    WHILE           shift and go to state 23
    INTNUMBER       shift and go to state 24
    FLOATNUMBER     shift and go to state 25
    (               shift and go to state 12
    -               shift and go to state 26
    ID              shift and go to state 22
    [               shift and go to state 27
    ZEROS           shift and go to state 30
    ONES            shift and go to state 31
    EYE             shift and go to state 32

    START                          shift and go to state 1
    MORESTATEMENTS                 shift and go to state 2
    STATEMENT                      shift and go to state 3
    IFSTATEMENT                    shift and go to state 5
    LOOP                           shift and go to state 6
    EXPR                           shift and go to state 7
    RETURNSTATEMENT                shift and go to state 8
    ASSIGNSTATEMENT                shift and go to state 9
    PRINTSTATEMENT                 shift and go to state 10
    LOGICALEXPR                    shift and go to state 13
    FORLOOP                        shift and go to state 14
    WHILELOOP                      shift and go to state 15
    ARITHMETICOPERATION            shift and go to state 16
    MATRIXOPERATION                shift and go to state 17
    ASSIGNABLE                     shift and go to state 19
    SPECIALMATRIXWORD              shift and go to state 28
    MATRIXACCESS                   shift and go to state 29

state 1

    (0) S' -> START .



state 2

    (2) START -> MORESTATEMENTS .

    $end            reduce using rule 2 (START -> MORESTATEMENTS .)


state 3

    (3) MORESTATEMENTS -> STATEMENT .
    (4) MORESTATEMENTS -> STATEMENT . MORESTATEMENTS
    (3) MORESTATEMENTS -> . STATEMENT
    (4) MORESTATEMENTS -> . STATEMENT MORESTATEMENTS
    (5) MORESTATEMENTS -> . { MORESTATEMENTS }
    (6) STATEMENT -> . IFSTATEMENT
    (7) STATEMENT -> . LOOP
    (8) STATEMENT -> . EXPR ;
    (9) STATEMENT -> . RETURNSTATEMENT ;
    (10) STATEMENT -> . ASSIGNSTATEMENT ;
    (11) STATEMENT -> . PRINTSTATEMENT ;
    (49) IFSTATEMENT -> . IF ( LOGICALEXPR ) MORESTATEMENTS
    (50) IFSTATEMENT -> . IF ( LOGICALEXPR ) MORESTATEMENTS ELSE MORESTATEMENTS
    (51) LOOP -> . FORLOOP
    (52) LOOP -> . WHILELOOP
    (28) EXPR -> . ARITHMETICOPERATION
    (29) EXPR -> . MATRIXOPERATION
    (30) EXPR -> . LOGICALEXPR
    (12) RETURNSTATEMENT -> . RETURN
    (13) RETURNSTATEMENT -> . RETURN EXPR
    (20) ASSIGNSTATEMENT -> . ASSIGNABLE = EXPR
    (21) ASSIGNSTATEMENT -> . ASSIGNABLE ASSIGNPLUS EXPR
    (22) ASSIGNSTATEMENT -> . ASSIGNABLE ASSIGNMINUS EXPR
    (23) ASSIGNSTATEMENT -> . ASSIGNABLE ASSIGNTIMES EXPR
    (24) ASSIGNSTATEMENT -> . ASSIGNABLE ASSIGNDIVIDE EXPR
    (14) PRINTSTATEMENT -> . PRINT PRINTABLES
    (53) FORLOOP -> . FOR ID = RANGEOPERATOR LOOPSTATEMENT
    (54) FORLOOP -> . FOR ID = RANGEOPERATOR { LOOPSTATEMENTS }
    (55) WHILELOOP -> . WHILE ( LOGICALEXPR ) LOOPSTATEMENT
    (56) WHILELOOP -> . WHILE ( LOGICALEXPR ) { LOOPSTATEMENTS }
    (37) ARITHMETICOPERATION -> . ASSIGNABLE
    (38) ARITHMETICOPERATION -> . INTNUMBER
    (39) ARITHMETICOPERATION -> . FLOATNUMBER
    (40) ARITHMETICOPERATION -> . ( ARITHMETICOPERATION )
    (41) ARITHMETICOPERATION -> . ARITHMETICOPERATION + ARITHMETICOPERATION
    (42) ARITHMETICOPERATION -> . ARITHMETICOPERATION - ARITHMETICOPERATION
    (43) ARITHMETICOPERATION -> . ARITHMETICOPERATION * ARITHMETICOPERATION
    (44) ARITHMETICOPERATION -> . ARITHMETICOPERATION / ARITHMETICOPERATION
    (45) ARITHMETICOPERATION -> . - ARITHMETICOPERATION
    (68) MATRIXOPERATION -> . ID
    (69) MATRIXOPERATION -> . [ MATRIXINITIALIZER ]
    (70) MATRIXOPERATION -> . ( MATRIXOPERATION )
    (71) MATRIXOPERATION -> . MATRIXOPERATION '
    (72) MATRIXOPERATION -> . MATRIXOPERATION MPLUS MATRIXOPERATION
    (73) MATRIXOPERATION -> . MATRIXOPERATION MMINUS MATRIXOPERATION
    (74) MATRIXOPERATION -> . MATRIXOPERATION MTIMES MATRIXOPERATION
    (75) MATRIXOPERATION -> . MATRIXOPERATION MDIVIDE MATRIXOPERATION
    (76) MATRIXOPERATION -> . SPECIALMATRIXWORD ( ARITHMETICOPERATION )
    (31) LOGICALEXPR -> . ARITHMETICOPERATION EQ ARITHMETICOPERATION
    (32) LOGICALEXPR -> . ARITHMETICOPERATION NEQ ARITHMETICOPERATION
    (33) LOGICALEXPR -> . ARITHMETICOPERATION > ARITHMETICOPERATION
    (34) LOGICALEXPR -> . ARITHMETICOPERATION < ARITHMETICOPERATION
    (35) LOGICALEXPR -> . ARITHMETICOPERATION LEQ ARITHMETICOPERATION
    (36) LOGICALEXPR -> . ARITHMETICOPERATION GEQ ARITHMETICOPERATION
    (25) ASSIGNABLE -> . ID
    (26) ASSIGNABLE -> . MATRIXACCESS
    (46) SPECIALMATRIXWORD -> . ZEROS
    (47) SPECIALMATRIXWORD -> . ONES
    (48) SPECIALMATRIXWORD -> . EYE
    (27) MATRIXACCESS -> . ID [ ARITHMETICOPERATION , ARITHMETICOPERATION ]

  ! shift/reduce conflict for { resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for INTNUMBER resolved as shift
  ! shift/reduce conflict for FLOATNUMBER resolved as shift
  ! shift/reduce conflict for ( resolved as shift
  ! shift/reduce conflict for - resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for [ resolved as shift
  ! shift/reduce conflict for ZEROS resolved as shift
  ! shift/reduce conflict for ONES resolved as shift
  ! shift/reduce conflict for EYE resolved as shift
    $end            reduce using rule 3 (MORESTATEMENTS -> STATEMENT .)
    }               reduce using rule 3 (MORESTATEMENTS -> STATEMENT .)
    ELSE            reduce using rule 3 (MORESTATEMENTS -> STATEMENT .)
    {               shift and go to state 4
    IF              shift and go to state 11
    RETURN          shift and go to state 18
    PRINT           shift and go to state 20
    FOR             shift and go to state 21
    WHILE           shift and go to state 23
    INTNUMBER       shift and go to state 24
    FLOATNUMBER     shift and go to state 25
    (               shift and go to state 12
    -               shift and go to state 26
    ID              shift and go to state 22
    [               shift and go to state 27
    ZEROS           shift and go to state 30
    ONES            shift and go to state 31
    EYE             shift and go to state 32

  ! {               [ reduce using rule 3 (MORESTATEMENTS -> STATEMENT .) ]
  ! IF              [ reduce using rule 3 (MORESTATEMENTS -> STATEMENT .) ]
  ! RETURN          [ reduce using rule 3 (MORESTATEMENTS -> STATEMENT .) ]
  ! PRINT           [ reduce using rule 3 (MORESTATEMENTS -> STATEMENT .) ]
  ! FOR             [ reduce using rule 3 (MORESTATEMENTS -> STATEMENT .) ]
  ! WHILE           [ reduce using rule 3 (MORESTATEMENTS -> STATEMENT .) ]
  ! INTNUMBER       [ reduce using rule 3 (MORESTATEMENTS -> STATEMENT .) ]
  ! FLOATNUMBER     [ reduce using rule 3 (MORESTATEMENTS -> STATEMENT .) ]
  ! (               [ reduce using rule 3 (MORESTATEMENTS -> STATEMENT .) ]
  ! -               [ reduce using rule 3 (MORESTATEMENTS -> STATEMENT .) ]
  ! ID              [ reduce using rule 3 (MORESTATEMENTS -> STATEMENT .) ]
  ! [               [ reduce using rule 3 (MORESTATEMENTS -> STATEMENT .) ]
  ! ZEROS           [ reduce using rule 3 (MORESTATEMENTS -> STATEMENT .) ]
  ! ONES            [ reduce using rule 3 (MORESTATEMENTS -> STATEMENT .) ]
  ! EYE             [ reduce using rule 3 (MORESTATEMENTS -> STATEMENT .) ]

    STATEMENT                      shift and go to state 3
    MORESTATEMENTS                 shift and go to state 33
    IFSTATEMENT                    shift and go to state 5
    LOOP                           shift and go to state 6
    EXPR                           shift and go to state 7
    RETURNSTATEMENT                shift and go to state 8
    ASSIGNSTATEMENT                shift and go to state 9
    PRINTSTATEMENT                 shift and go to state 10
    LOGICALEXPR                    shift and go to state 13
    FORLOOP                        shift and go to state 14
    WHILELOOP                      shift and go to state 15
    ARITHMETICOPERATION            shift and go to state 16
    MATRIXOPERATION                shift and go to state 17
    ASSIGNABLE                     shift and go to state 19
    SPECIALMATRIXWORD              shift and go to state 28
    MATRIXACCESS                   shift and go to state 29

state 4

    (5) MORESTATEMENTS -> { . MORESTATEMENTS }
    (3) MORESTATEMENTS -> . STATEMENT
    (4) MORESTATEMENTS -> . STATEMENT MORESTATEMENTS
    (5) MORESTATEMENTS -> . { MORESTATEMENTS }
    (6) STATEMENT -> . IFSTATEMENT
    (7) STATEMENT -> . LOOP
    (8) STATEMENT -> . EXPR ;
    (9) STATEMENT -> . RETURNSTATEMENT ;
    (10) STATEMENT -> . ASSIGNSTATEMENT ;
    (11) STATEMENT -> . PRINTSTATEMENT ;
    (49) IFSTATEMENT -> . IF ( LOGICALEXPR ) MORESTATEMENTS
    (50) IFSTATEMENT -> . IF ( LOGICALEXPR ) MORESTATEMENTS ELSE MORESTATEMENTS
    (51) LOOP -> . FORLOOP
    (52) LOOP -> . WHILELOOP
    (28) EXPR -> . ARITHMETICOPERATION
    (29) EXPR -> . MATRIXOPERATION
    (30) EXPR -> . LOGICALEXPR
    (12) RETURNSTATEMENT -> . RETURN
    (13) RETURNSTATEMENT -> . RETURN EXPR
    (20) ASSIGNSTATEMENT -> . ASSIGNABLE = EXPR
    (21) ASSIGNSTATEMENT -> . ASSIGNABLE ASSIGNPLUS EXPR
    (22) ASSIGNSTATEMENT -> . ASSIGNABLE ASSIGNMINUS EXPR
    (23) ASSIGNSTATEMENT -> . ASSIGNABLE ASSIGNTIMES EXPR
    (24) ASSIGNSTATEMENT -> . ASSIGNABLE ASSIGNDIVIDE EXPR
    (14) PRINTSTATEMENT -> . PRINT PRINTABLES
    (53) FORLOOP -> . FOR ID = RANGEOPERATOR LOOPSTATEMENT
    (54) FORLOOP -> . FOR ID = RANGEOPERATOR { LOOPSTATEMENTS }
    (55) WHILELOOP -> . WHILE ( LOGICALEXPR ) LOOPSTATEMENT
    (56) WHILELOOP -> . WHILE ( LOGICALEXPR ) { LOOPSTATEMENTS }
    (37) ARITHMETICOPERATION -> . ASSIGNABLE
    (38) ARITHMETICOPERATION -> . INTNUMBER
    (39) ARITHMETICOPERATION -> . FLOATNUMBER
    (40) ARITHMETICOPERATION -> . ( ARITHMETICOPERATION )
    (41) ARITHMETICOPERATION -> . ARITHMETICOPERATION + ARITHMETICOPERATION
    (42) ARITHMETICOPERATION -> . ARITHMETICOPERATION - ARITHMETICOPERATION
    (43) ARITHMETICOPERATION -> . ARITHMETICOPERATION * ARITHMETICOPERATION
    (44) ARITHMETICOPERATION -> . ARITHMETICOPERATION / ARITHMETICOPERATION
    (45) ARITHMETICOPERATION -> . - ARITHMETICOPERATION
    (68) MATRIXOPERATION -> . ID
    (69) MATRIXOPERATION -> . [ MATRIXINITIALIZER ]
    (70) MATRIXOPERATION -> . ( MATRIXOPERATION )
    (71) MATRIXOPERATION -> . MATRIXOPERATION '
    (72) MATRIXOPERATION -> . MATRIXOPERATION MPLUS MATRIXOPERATION
    (73) MATRIXOPERATION -> . MATRIXOPERATION MMINUS MATRIXOPERATION
    (74) MATRIXOPERATION -> . MATRIXOPERATION MTIMES MATRIXOPERATION
    (75) MATRIXOPERATION -> . MATRIXOPERATION MDIVIDE MATRIXOPERATION
    (76) MATRIXOPERATION -> . SPECIALMATRIXWORD ( ARITHMETICOPERATION )
    (31) LOGICALEXPR -> . ARITHMETICOPERATION EQ ARITHMETICOPERATION
    (32) LOGICALEXPR -> . ARITHMETICOPERATION NEQ ARITHMETICOPERATION
    (33) LOGICALEXPR -> . ARITHMETICOPERATION > ARITHMETICOPERATION
    (34) LOGICALEXPR -> . ARITHMETICOPERATION < ARITHMETICOPERATION
    (35) LOGICALEXPR -> . ARITHMETICOPERATION LEQ ARITHMETICOPERATION
    (36) LOGICALEXPR -> . ARITHMETICOPERATION GEQ ARITHMETICOPERATION
    (25) ASSIGNABLE -> . ID
    (26) ASSIGNABLE -> . MATRIXACCESS
    (46) SPECIALMATRIXWORD -> . ZEROS
    (47) SPECIALMATRIXWORD -> . ONES
    (48) SPECIALMATRIXWORD -> . EYE
    (27) MATRIXACCESS -> . ID [ ARITHMETICOPERATION , ARITHMETICOPERATION ]

    {               shift and go to state 4
    IF              shift and go to state 11
    RETURN          shift and go to state 18
    PRINT           shift and go to state 20
    FOR             shift and go to state 21
    WHILE           shift and go to state 23
    INTNUMBER       shift and go to state 24
    FLOATNUMBER     shift and go to state 25
    (               shift and go to state 12
    -               shift and go to state 26
    ID              shift and go to state 22
    [               shift and go to state 27
    ZEROS           shift and go to state 30
    ONES            shift and go to state 31
    EYE             shift and go to state 32

    MORESTATEMENTS                 shift and go to state 34
    STATEMENT                      shift and go to state 3
    IFSTATEMENT                    shift and go to state 5
    LOOP                           shift and go to state 6
    EXPR                           shift and go to state 7
    RETURNSTATEMENT                shift and go to state 8
    ASSIGNSTATEMENT                shift and go to state 9
    PRINTSTATEMENT                 shift and go to state 10
    LOGICALEXPR                    shift and go to state 13
    FORLOOP                        shift and go to state 14
    WHILELOOP                      shift and go to state 15
    ARITHMETICOPERATION            shift and go to state 16
    MATRIXOPERATION                shift and go to state 17
    ASSIGNABLE                     shift and go to state 19
    SPECIALMATRIXWORD              shift and go to state 28
    MATRIXACCESS                   shift and go to state 29

state 5

    (6) STATEMENT -> IFSTATEMENT .

    {               reduce using rule 6 (STATEMENT -> IFSTATEMENT .)
    IF              reduce using rule 6 (STATEMENT -> IFSTATEMENT .)
    RETURN          reduce using rule 6 (STATEMENT -> IFSTATEMENT .)
    PRINT           reduce using rule 6 (STATEMENT -> IFSTATEMENT .)
    FOR             reduce using rule 6 (STATEMENT -> IFSTATEMENT .)
    WHILE           reduce using rule 6 (STATEMENT -> IFSTATEMENT .)
    INTNUMBER       reduce using rule 6 (STATEMENT -> IFSTATEMENT .)
    FLOATNUMBER     reduce using rule 6 (STATEMENT -> IFSTATEMENT .)
    (               reduce using rule 6 (STATEMENT -> IFSTATEMENT .)
    -               reduce using rule 6 (STATEMENT -> IFSTATEMENT .)
    ID              reduce using rule 6 (STATEMENT -> IFSTATEMENT .)
    [               reduce using rule 6 (STATEMENT -> IFSTATEMENT .)
    ZEROS           reduce using rule 6 (STATEMENT -> IFSTATEMENT .)
    ONES            reduce using rule 6 (STATEMENT -> IFSTATEMENT .)
    EYE             reduce using rule 6 (STATEMENT -> IFSTATEMENT .)
    $end            reduce using rule 6 (STATEMENT -> IFSTATEMENT .)
    }               reduce using rule 6 (STATEMENT -> IFSTATEMENT .)
    ELSE            reduce using rule 6 (STATEMENT -> IFSTATEMENT .)


state 6

    (7) STATEMENT -> LOOP .

    {               reduce using rule 7 (STATEMENT -> LOOP .)
    IF              reduce using rule 7 (STATEMENT -> LOOP .)
    RETURN          reduce using rule 7 (STATEMENT -> LOOP .)
    PRINT           reduce using rule 7 (STATEMENT -> LOOP .)
    FOR             reduce using rule 7 (STATEMENT -> LOOP .)
    WHILE           reduce using rule 7 (STATEMENT -> LOOP .)
    INTNUMBER       reduce using rule 7 (STATEMENT -> LOOP .)
    FLOATNUMBER     reduce using rule 7 (STATEMENT -> LOOP .)
    (               reduce using rule 7 (STATEMENT -> LOOP .)
    -               reduce using rule 7 (STATEMENT -> LOOP .)
    ID              reduce using rule 7 (STATEMENT -> LOOP .)
    [               reduce using rule 7 (STATEMENT -> LOOP .)
    ZEROS           reduce using rule 7 (STATEMENT -> LOOP .)
    ONES            reduce using rule 7 (STATEMENT -> LOOP .)
    EYE             reduce using rule 7 (STATEMENT -> LOOP .)
    $end            reduce using rule 7 (STATEMENT -> LOOP .)
    }               reduce using rule 7 (STATEMENT -> LOOP .)
    ELSE            reduce using rule 7 (STATEMENT -> LOOP .)


state 7

    (8) STATEMENT -> EXPR . ;

    ;               shift and go to state 35


state 8

    (9) STATEMENT -> RETURNSTATEMENT . ;

    ;               shift and go to state 36


state 9

    (10) STATEMENT -> ASSIGNSTATEMENT . ;

    ;               shift and go to state 37


state 10

    (11) STATEMENT -> PRINTSTATEMENT . ;

    ;               shift and go to state 38


state 11

    (49) IFSTATEMENT -> IF . ( LOGICALEXPR ) MORESTATEMENTS
    (50) IFSTATEMENT -> IF . ( LOGICALEXPR ) MORESTATEMENTS ELSE MORESTATEMENTS

    (               shift and go to state 39


state 12
